--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
  <html>
  <head>
-    <title>Catalogo de motocicletas</title>
+    <title>Sobre ruedas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="reset/reset.css">
  </head>
  <body>
-
-   <h1> Catálogo </h1>
-   <section class="DESLIZATE_AL_INICIO" ID="DESLIZATE_AL_INICIO">
+  <section class="DESLIZATE_AL_INICIO" ID="INICIO"> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+   <h1> Wheelee catalog </h1>
+   <h5>Siguenos en nuestras redes sociales</h5>
+    <ul class="redsocial">
+      <li><a href="https://www.facebook.com/diego.esteban.9047" target="_blank"><img src="imagenes/Facebook_Logo_(2019).png" width="60" height="60"></a></li>
+      <li><a href="https://www.instagram.com/soldier_be/" target="_blank"><img src="imagenes/png-transparent-logo-instagram-text-logo-number.png"width="60" height="60"></a></li>
+    </ul>
+   <div class="text-center"><img id="choche" src="imagenes/choche007-motorcycle.gif"  width="1200" height="300" /></div>
+  </section> 
+  <br><br><br><br>
    <nav class="navmarcas">
     <a class="textwhite" href="#DUCATI">DUCATI</a>
     <a class="textwhite" href="#HARLEY_DAVIDSON">HARLEY DAVIDSON</a>
@@ -19,7 +28,7 @@
     <a class="textwhite" href="#REGISTRATE">REGISTRARSE</a>
     
    </nav>
-   </section>
+   
    <br><br><br><br><br>
   <section class="DUCATI" ID="DUCATI">
     
@@ -28,7 +37,7 @@
     <img src="imagenes/ducati_v4s.jpg" width="500" height="350" />
     <div class="contenedor">
         <p>En el siguiente video se muestra el funcionamiento de esta motocicleta</p>   
-        <iframe src="https://www.youtube.com/embed/2NeXXdpnsSI" id="video" width="500" height="350" ></iframe>> 
+        <iframe src="https://www.youtube.com/embed/2NeXXdpnsSI" width="500" height="350" ></iframe>> 
     </div>
   </section>
     <br><br><br><br><br>
@@ -150,12 +159,12 @@
       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     </div>
     <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Comentanos que tal<br>tu experiencia con nosotros</label>
+      <label for="exampleFormControlTextarea1" class="form-label">Comentanos que tal tu experiencia con nosotros</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
   </section>
   <nav class="navinicio">
-    <a class="textwhite" href="DESLIZATE_AL_INICIO">DESLIZATE AL INICIO</a>
+    <a class="textwhite" href="#INICIO">DESLIZATE AL INICIO</a>
   </nav>
   </body>
  </html>
